# bareUtils

./: .gitignore  .travis.yml  README.md  mkdocs.yml  mypy.ini  punch_config.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py  tox.ini  travis.yaml
3.7/: 404.html  index.html  sitemap.xml
3.7/api/bareutils.compression.middleware/: index.html
3.7/api/bareutils.compression.streaming/: index.html
3.7/api/bareutils.cookies/: index.html
3.7/api/bareutils.header/: index.html
3.7/api/bareutils.response_code/: index.html
3.7/api/bareutils.responses/: index.html
3.7/api/bareutils.streaming/: index.html
3.7/api/bareutils.unpacking/: index.html
3.7/css/: custom.css
3.7/user-guide/compression/: index.html
3.7/user-guide/cookies/: index.html
3.7/user-guide/getting-started/: index.html
3.7/user-guide/headers/: index.html
3.7/user-guide/installation/: index.html
3.7/user-guide/response-codes/: index.html
3.7/user-guide/streaming-content/: index.html
4.0/: 404.html  index.html
bareutils/: __init__.py  compression.py  cookies.py  header.py  response_code.py  streaming.py  unpacking.py
bareutils/compression/: __init__.py  middleware.py  streaming.py
bareutils/dates/: __init__.py  helpers.py  rfc_7231.py  rfc_850.py
docs/: 404.html  index.html  index.md
docs/api/: bareutils.compression.md  bareutils.cookies.md  bareutils.response_code.md  bareutils.responses.md  bareutils.streaming.md
docs/search/: search_index.json
docs/user-guide/: compression.md  headers.md  installation.md  response-codes.md  streaming-content.md  unpacking.md
documentation/: index.md
documentation/api/: bareutils.compression.middleware.md  bareutils.compression.streaming.md  bareutils.header.md  bareutils.unpacking.md
documentation/user-guide/: compression.md  cookies.md  getting-started.md  headers.md  installation.md
src/bareutils/: __init__.py  compression.py  cookies.py  header.py  response_code.py  responses.py  streaming.py  unpacking.py
tests/: test_compression.py  test_cookies.py  test_header.py  test_response_code.py  test_streaming.py
tests/dates/: test_dates.py
(+60 files in other folders)
