[tool.poetry]
name = "bareutils"
version = "3.5.1"
description = "Utilities for bareASGI and bareClient"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareutils" },
]
repository = "https://github.com/rob-blackbourn/bareutils"

[tool.poetry.dependencies]
python = "^3.7"
baretypes = "^3"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
pylint = "^2.4"
mypy = "^0.740.0"
autopep8 = "^1.4"
mkdocs = "^1.0.4"
jetblack-markdown = "^0.6"
mkdocs-material = "^4.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
