[tool.poetry]
name = "bareutils"
version = "4.0.0-alpha.0"
description = "Utilities for bareASGI and bareClient"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareutils" },
]
repository = "https://github.com/rob-blackbourn/bareutils"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
pytest-runner = "^5.1"
pylint = "^2.9"
mypy = "^0.910"
autopep8 = "^1.4"
mkdocs = "^1.2"
mkdocs-material = "^7.2"
jetblack-markdown = "^0.6"
mike = "^1.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
