[tool.poetry]
name = "bareutils"
version = "4.0.2"
description = "Utilities for bareASGI and bareClient"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "bareutils" },
]
repository = "https://github.com/rob-blackbourn/bareutils"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
pytest-asyncio = "^0.21"
pylint = "^2.17"
mypy = "^1.3"
autopep8 = "^2.0"
mkdocs = "^1.2"
mkdocs-material = "^7.2"
jetblack-markdown = "^0.6"
mike = "^1.1.1"
tox = "^4.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
